# echo-presence-ai

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  frontend-server.mjs  lovable.toml  nginx.conf  package.json  pyproject.toml  test_error.py  test_repro.py  test_stop.py  test_vieneu.py
docs/: architecture.md  five_day_plan.md  model_decisions.md  presentation_vi.md
echo-presence-ai/: package-lock.json  package.json  vite.config.ts
echo-presence-ai/src/: styles.css
echo-presence-ai/src/ai/: pipeline.ts  userMemory.ts
echo-presence-ai/src/components/: ChatComposer.tsx  ConversationSidebar.tsx  LumiExperience.tsx  LumiUserGate.tsx  MessengerChat.tsx  MicButton.tsx  StatusIndicator.tsx  SyncBadge.tsx  VoiceSettings.tsx
echo-presence-ai/src/hooks/: useConversationsWithMemory.ts  (+2 more)
owner_voices/: README.md
owner_voices/Uyên/: 01_1782294979600573375.txt
scripts/: tmux-down.sh  tmux-status.sh  tmux-up.sh
src/: routeTree.gen.ts  styles.css
src/components/: ConversationSidebar.tsx  LumiCartoonFace.tsx  LumiExperience.tsx  LumiFace.tsx  LumiKawaiiFace.tsx  MessengerChat.tsx  StatusIndicator.tsx
src/lumi/: __init__.py  config.py  demo_cli.py  errors.py  latency_log.py  models.py  mvp_cli.py  mvp_pipeline.py  output_metadata.py  pipeline.py  prefetch_models.py  prompts.py  web_app.py
src/lumi_companion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/routes/: calm.tsx  index.tsx
src/store/: conversations.ts
tests/: test_latency_log.py  test_mvp_pipeline.py  test_output_metadata.py  test_output_paths.py  test_pipeline.py  test_prompts.py  test_speaker_profiles.py  test_streaming.py  test_tts_module.py  test_user_memory.py  test_web_sessions.py
tmpdir/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
(+33 files in other folders)
