[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lumi-companion"
version = "0.1.0"
description = "Lumi - a Vietnamese voice companion demo scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
vad = ["silero-vad", "onnxruntime"]
asr = ["transformers", "accelerate", "torch", "torchaudio", "soundfile"]
llm = ["transformers", "accelerate", "torch"]
tts = ["edge-tts"]
audio = ["sounddevice", "soundfile"]
dev = ["pytest"]
all-models = [
    "transformers",
    "accelerate",
    "torch",
    "torchaudio",
    "soundfile",
    "sounddevice",
    "edge-tts",
]

[project.scripts]
lumi-web = "lumi.web_app:main"
lumi-prefetch = "lumi.prefetch_models:main"

[tool.setuptools.packages.find]
where = ["src"]
